refacto complete components

--- a/data/projects.json
+++ b/data/projects.json
@@ -3,11 +3,11 @@
       {
         "id": "1",
         "title": "404",
-        "description": "404 but make it art",
+        "description": "404 page but in deep-dark-blue sea of creatures",
         "fullDescription": "Fractal patterns and abstract shapes come together in this experimental 3D workhis project use p5.js,React to create a dynamic and interactive experience that pushes the boundaries of digital art.",
         "image": "/en/404.png",
         "images": ["/en/404.png", "/en/tree-1.png", "/en/jellyfish.png"],
-        "tags": ["Three.js", "React", "WebGL"],
+        "tags": ["P5.js", "Next.js", "Framer-Motion"],
         "category": "Development",
         "year": "2024",
         "liveUrl": "https://example.com/demo",
@@ -16,26 +16,27 @@
       },
       {
         "id": "2",
-        "title": "Enroll UG",
+        "title": "Shoney's",
         "description": "A platform to find your dream school",
         "fullDescription": "An award-winning digital experience exploring the concept of Ikigai through interactive storytelling. This project combines subtle animations, spatial audio, and responsive design to create a meditative journey for users.",
-        "image": "/en/home.png",
-        "images": ["/en/home.png", "/en/homedark.png", "/en/regdark.png"],
+        "image": "/shoneys.png",
+        "images": ["/shoneys.png"],
         "tags": ["Express", "React", "MongoDB"],
         "category": "Interactive",
-        "year": "2023",
+        "year": "2017",
         "liveUrl": "https://example.com/ikigai",
         "githubUrl": "https://github.com/example/ikigai",
         "features": ["Parallax scrolling effects", "Custom WebGL shaders", "Responsive typography system"]
       },
+  
       {
         "id": "3",
-        "title": "Auth",
-        "description": "Login and Register pages with dynamic onboarding interactions",
+        "title": "Clippers",
+        "description": "Online men's e-commerce store",
         "fullDescription": "Inspired from Dribbble",
-        "image": "/blue.png",
-        "images": ["/blue.png"],
-        "tags": ["Next.js", "Shopify", "Framer Motion"],
+        "image": "/clipper.png",
+        "images": ["/clipper.png"],
+        "tags": ["Next.js", "Green-sock", "Framer Motion"],
         "category": "Interactive",
         "year": "2023",
         "liveUrl": "https://example.com/kintsugi",
@@ -72,17 +73,30 @@
       },
       {
         "id": "6",
-        "title": "Wabi-Sabi Design System",
-        "description": "Component library embracing imperfection and asymmetry",
+        "title": "Hakurei - Airbnb",
+        "description": "With of 400 years of history located in Japan, Hakurei is an airbnb..",
         "fullDescription": "A comprehensive design system and component library inspired by wabi-sabi philosophy. This project embraces imperfection, asymmetry, and natural textures to create digital interfaces that feel more human and authentic.",
         "image": "/overview.png",
-        "images": ["/overview.png"],
+        "images": ["/overview.png", "/clip.png"],
         "tags": ["Storybook", "TypeScript", "Figma"],
         "category": "Design",
-        "year": "2022",
+        "year": "2024",
         "liveUrl": "https://example.com/wabisabi",
         "githubUrl": "https://github.com/example/wabisabi",
         "features": ["50+ customizable components", "Accessibility-first approach", "Comprehensive documentation"]
+      },    {
+        "id": "7",
+        "title": "Enroll UG",
+        "description": "A platform to find your dream school",
+        "fullDescription": "An award-winning digital experience exploring the concept of Ikigai through interactive storytelling. This project combines subtle animations, spatial audio, and responsive design to create a meditative journey for users.",
+        "image": "/en/home.png",
+        "images": ["/en/home.png", "/en/homedark.png", "/en/regdark.png"],
+        "tags": ["Express", "React", "MongoDB"],
+        "category": "Interactive",
+        "year": "2023",
+        "liveUrl": "https://example.com/ikigai",
+        "githubUrl": "https://github.com/example/ikigai",
+        "features": ["Parallax scrolling effects", "Custom WebGL shaders", "Responsive typography system"]
       }
     ]
   }
